# battle-arena

./: CMakeLists.txt  battle_arena  log.txt  main.c
data/: data
include/: battle-arena.h  json.h  logger.h  sql.h  structs.h  utility.h
json/: items.json
src/: game.c  json.c  logger.c  sql.c  structs.c  utility.c
